<resources>
    <string name="app_name">ioasys Books</string>
    <string name="books">Books</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="entrar">Entrar</string>
    <string name="error_text">Email e/ou senha incorretos.</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fechar">Fechar</string>
    <string name="paginas">Páginas</string>
    <string name="editor">Editor</string>
    <string name="publicacao">Publicação</string>
    <string name="idioma">Idioma</string>
    <string name="ingles">Inglês</string>
    <string name="placeholder_error">Não encontramos nenhum livro com esses termos.</string>
    <string name="list_empty">Não encontramos nenhum\nlivro com esses termos.</string>
    <string name="informacoes">INFORMAÇÕES</string>
    <string name="titulo_original">Título Original</string>
    <string name="isbn_10">ISBN-10</string>
    <string name="isbn_13">ISBN-13</string>
    <string name="resenha_da_editora">RESENHA DA EDITORA</string>
    <string name="pesquisar">Pesquisar</string>
</resources>