<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/background_image"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ioasys_logo"
        android:layout_marginStart="16dp"
        android:drawablePadding="8dp"
        android:gravity="center"
        android:text="@string/books"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtFieldEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="80dp"
        android:hint="@string/email"
        android:textColorHint="@color/white"
        app:hintTextColor="@color/white"
        app:boxStrokeWidth="0dp"
        app:boxStrokeColor="@color/black_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtLabel"
        app:layout_constraintBottom_toTopOf="@+id/txtFieldPassword">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtFieldEditEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_background_input"
            android:textColor="@color/white"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtFieldPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:hint="@string/password"
        android:textColorHint="@color/white"
        app:hintTextColor="@color/white"
        app:boxStrokeColor="@color/black_input"
        app:boxStrokeWidth="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtFieldEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtFieldEditPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:background="@drawable/bg_background_input"
            android:textColor="@color/white"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnEnterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/entrar"
        android:backgroundTint="@color/white"
        android:textColor="@color/pink"
        app:cornerRadius="44dp"
        app:layout_constraintBottom_toBottomOf="@+id/txtFieldPassword"
        app:layout_constraintEnd_toEndOf="@+id/txtFieldPassword"
        app:layout_constraintTop_toTopOf="@+id/txtFieldPassword"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/errorMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/error_text"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/txtFieldPassword"
        app:layout_constraintEnd_toEndOf="@+id/txtFieldPassword"
        tools:visibility="visible"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>



