<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/books_background_images"
    android:fitsSystemWindows="true"
    tools:context=".presentation.ui.fragments.BookListFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="26dp"
        android:drawableStart="@drawable/ioasys_logo"
        android:drawablePadding="8dp"
        android:gravity="center"
        android:text="@string/books"
        android:textColor="@color/secondary_black"
        android:textSize="28sp"
        app:drawableTint="@color/secondary_black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/logOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/ic_log_out"
        app:layout_constraintBottom_toBottomOf="@+id/txtLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtLabel" />

    <br.com.ioasys.ioasysbooks.presentation.ui.custom_views.CustomSearch
        android:id="@+id/editSearch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:custom_hint="@string/pesquisar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logOut" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvBooks"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:clipToPadding="false"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editSearch"
        tools:listitem="@layout/book_item" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvEmptyList"
        style="@style/ListEmpty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_empty"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editSearch"
        app:layout_constraintVertical_bias="0.25"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>