<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btnClose"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/ic_close"
            android:contentDescription="@string/fechar"
            android:layout_margin="16dp"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/imgBigBookContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/btnClose"
            android:elevation="24dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgBigBook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_big_book" />

        </com.google.android.material.card.MaterialCardView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvBookName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@id/imgBigBookContainer"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            android:layout_marginEnd="40dp"
            android:textSize="28sp"
            android:textColor="@color/secondary_black"
            android:textStyle="bold"
            android:lineSpacingMultiplier="1.2"
            android:maxLines="2"
            android:ellipsize="end"
            android:text="Change By Design Second line exa..."/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvAuthors"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintEnd_toEndOf="@id/tvBookName"
            app:layout_constraintTop_toBottomOf="@id/tvBookName"
            android:textSize="12sp"
            android:textColor="#AB2680"
            android:text="Tim Brown, Julie Zhuo, Fried Maximiilian" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvInfoLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/secondary_black"
            android:textStyle="bold"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/tvAuthors"
            android:text="INFORMAÇÕES" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/labelsContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="vertical"
            android:layout_marginTop="16dp"
            android:paddingStart="0dp"
            android:paddingEnd="8dp"
            app:layout_constraintEnd_toEndOf="@id/infoContainer"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/tvInfoLabel">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvLabelPages"
                style="@style/Book_Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/paginas"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvLabelEditor"
                style="@style/Book_Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/editor"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvLabelDatePublication"
                style="@style/Book_Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/publicacao"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvLabelLanguage"
                style="@style/Book_Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/idioma"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvLabelTitle"
                style="@style/Book_Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Título Original"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvLabelISBN10"
                style="@style/Book_Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ISBN-10"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvLabelISBN13"
                style="@style/Book_Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ISBN-13"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/infoContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="vertical"
            android:paddingStart="8dp"
            android:paddingEnd="0dp"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toEndOf="@id/guidelineStart"
            app:layout_constraintTop_toTopOf="@id/labelsContainer">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvInfoPages"
                style="@style/Book_Info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="384 páginas"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvInfoEditor"
                style="@style/Book_Info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Editora Loyola"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvInfoDatePublication"
                style="@style/Book_Info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2020"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvInfoLanguage"
                style="@style/Book_Info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ingles"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvInfoTitle"
                style="@style/Book_Info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Change By Design"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvInfoISBN10"
                style="@style/Book_Info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0062856626"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvInfoISBN13"
                style="@style/Book_Info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="978-0062856623"/>

        </androidx.appcompat.widget.LinearLayoutCompat>
        
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvReviewLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/secondary_black"
            android:textStyle="bold"
            android:textSize="12sp"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@id/labelsContainer"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            android:text="RESENHA DA EDITORA"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvReview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textSize="12sp"
            android:textColor="#999999"
            tools:text="The subject of “design thinking” is the rage at business schools, throughout corporations, and increasingly in the popular press—due in large part to the work of IDEO, a leading design firm, and its celebrated CEO, Tim Brown, who uses this book to show how the techniques and strategies of design belong at every level."
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvReviewLabel"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="24dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="24dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>